# finance-ai-advisor

./: LICENSE  README.md  main.py  pyproject.toml
app/data/clean/: AAPL.clean.csv  MSFT.clean.csv  SPY.clean.csv
app/data/raw/: AAPL.csv  MSFT.csv  SPY.csv
app/ml/: features.py
app/utils/: data_loader.py  db.py  ohlcv.py
scripts/: clean_data.py  compute_features.py  fetch_data.py  load_to_db.py  train_model.py
