[project]
name = "finance-ai-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "psycopg[binary,pq]>=3.2.12",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
